--- a/rush.yaml
+++ b/rush.yaml
@@ -104627,7 +104627,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon monsters with 0 DEF from your Graveyard equal to [the number of monsters revealed to meet the requirement] to your field in face-down Defense Position. If you do, until the end of this turn, you cannot Normal Summon Level 9 or lower monsters, nor Set monsters from your hand.
+    Special Summon monsters with 0 DEF from your Graveyard to your field in face-down Defense Position equal to [the number of monsters revealed to meet the requirement]. If you do, until the end of this turn, you cannot Normal Summon Level 9 or lower monsters, nor Set monsters from your hand.
   de:
   es:
   fr:
@@ -125164,7 +125164,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon Level 8 or lower WIND Attribute Psychic Type monsters from your Graveyard equal to [the number of cards revealed to meet the requirement] face-up to your field.
+    Special Summon Level 8 or lower WIND Attribute Psychic Type monsters from your Graveyard face-up to your field equal to [the number of cards revealed to meet the requirement].
   de:
   es:
   fr:
