--- a/rush.yaml
+++ b/rush.yaml
@@ -144995,3 +144995,552 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1056956
+---
+konami_id:
+name:
+  en: Elemental HERO Neos
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A new Elemental HERO has arrived from Neo-Space! When he initiates a Contact Fusion with a Neo-Spacian his unknown powers are unleashed.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Normal
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 2000
+series:
+- Elemental HERO
+images:
+- index: 1
+  image: ElementalHERONeos-RDSD0B-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0B-JP004
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
+  - set_number: RD/SD0B-JPS03
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Ultra Rare
+yugipedia_page_id: 1059062
+---
+konami_id:
+name:
+  en: Elemental HERO Sparkman
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    An Elemental HERO and a warrior of light who proficiently wields many kinds of armaments. His Static Shockwave cuts off the path of villainy.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Normal
+attribute: LIGHT
+level: 4
+atk: 1600
+def: 1400
+series:
+- Elemental HERO
+images:
+- index: 1
+  image: ElementalHEROSparkman-RDSD0B-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0B-JP005
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
+  - set_number: RD/SD0B-JPS06
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 1059064
+---
+konami_id:
+name:
+  en: Elemental HERO Clayman
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    An Elemental HERO with a clay body built-to-last. He'll preserve his Elemental HERO colleagues at any cost.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Normal
+attribute: EARTH
+level: 4
+atk: 800
+def: 2000
+series:
+- Elemental HERO
+images:
+- index: 1
+  image: ElementalHEROClayman-RDSD0B-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0B-JP006
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
+  - set_number: RD/SD0B-JPS07
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 1059066
+---
+konami_id:
+name:
+  en: Elemental HERO Burstinatrix
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A flame manipulator who was the first Elemental HERO woman. Her Burstfire burns away villainy.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Normal
+attribute: FIRE
+level: 3
+atk: 1200
+def: 800
+series:
+- Elemental HERO
+images:
+- index: 1
+  image: ElementalHEROBurstinatrix-RDSD0B-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0B-JP007
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
+  - set_number: RD/SD0B-JPS08
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 1059068
+---
+konami_id:
+name:
+  en: Elemental HERO Avian
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A winged Elemental HERO who wheels through the sky and manipulates the wind. His signature move, Featherbreak, gives villainy a blow from sky-high.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Normal
+attribute: WIND
+level: 3
+atk: 1000
+def: 1000
+series:
+- Elemental HERO
+images:
+- index: 1
+  image: ElementalHEROAvian-RDSD0B-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0B-JP008
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
+  - set_number: RD/SD0B-JPS09
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Super Rare
+yugipedia_page_id: 1059070
+---
+konami_id:
+name:
+  en: Elemental HERO Bubbleman
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have no other cards in your hand or field during your Main Phase that you Normal or Special Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 2 cards.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: WATER
+level: 4
+atk: 800
+def: 1200
+series:
+- Elemental HERO
+images:
+- index: 1
+  image: ElementalHEROBubbleman-RDSD0B-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0B-JP009
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
+  - set_number: RD/SD0B-JPS10
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1059072
+---
+konami_id:
+name:
+  en: Skyscraper
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    While this card is face-up in the Field Zone, face-up "Elemental HERO Avian", "Elemental HERO Burstinatrix", "Elemental HERO Clayman", "Elemental HERO Sparkman", "Elemental HERO Bubbleman", "Elemental HERO Neos", and Level 5 to 8 Warrior Fusion Monsters on the turn player's field gain 1000 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Field
+series:
+- Elemental HERO
+images:
+- index: 1
+  image: Skyscraper-RDSD0B-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0B-JP032
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Common
+  - set_number: RD/SD0B-JPS14
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1059074
+---
+konami_id:
+name:
+  en: Elemental HERO Flame Wingman
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    Must be Fusion Summoned.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    When this card destroys a monster by battle and sends it to the Graveyard, inflict damage to your opponent equal to [that monster's original ATK].
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Fusion / Effect
+attribute: WIND
+level: 6
+atk: 2100
+def: 1200
+materials:
+  en: |-
+    "Elemental HERO Avian" + "Elemental HERO Burstinatrix"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Elemental HERO
+images:
+- index: 1
+  image: ElementalHEROFlameWingman-RDSD0B-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0B-JP001
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Ultra Rare
+  - set_number: RD/SD0B-JPS01
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  text:
+    en: true
+yugipedia_page_id: 1059076
+---
+konami_id:
+name:
+  en: Elemental HERO Burst Wingman
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>Ｅ・ＨＥＲＯ<rt>エレメンタルヒーロー</rt></ruby> バースト・ウィングマン
+  ja_romaji: Erementaru Hīrō Bāsuto Winguman
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    Must be Fusion Summoned.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up Warrior monster on your field gains 1000 ATK until the end of your opponent's next turn. Then, you can destroy 1 Spell/Trap Card on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Fusion / Effect
+attribute: FIRE
+level: 6
+atk: 2100
+def: 1200
+materials:
+  en: |-
+    "Elemental HERO Avian" + "Elemental HERO Burstinatrix"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Elemental HERO
+images:
+- index: 1
+  image: ElementalHEROBurstWingman-RDSD0B-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SD0B-JP002
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Ultra Rare
+  - set_number: RD/SD0B-JPS02
+    set_name: 'Structure Deck: Birth of Hero'
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1059078
