--- a/data/cards/yugipedia1058430.yaml
+++ b/data/cards/yugipedia1058430.yaml
@@ -22,7 +22,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の③の効果は１ターンに３度まで使用できない。①：自分フィールドの魔法使い族モンスターの攻撃力・守備力は５００アップする。②：自分フィールドの「魅惑の女王」効果モンスターは以下の効果を得る。●自身の効果でカードを装備しているこのカードを墓地へ送って発動できる。手札・デッキから攻撃力１５００以下の魔法使い族モンスター１体を特殊召喚する。③：手札を１枚墓地へ送って発動できる。デッキから「魅惑の女王」モンスター１体を選び、手札に加えるか相手フィールドに特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
