--- a/data/cards/yugipedia1058513.yaml
+++ b/data/cards/yugipedia1058513.yaml
@@ -50,6 +50,10 @@ sets:
   - set_number: ROTA-JP041
     set_name: Rage of the Abyss
     rarities:
+    - Ultra Rare
+    - Ultimate Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Not yet released
