--- a/data/rush/15351.yaml
+++ b/data/rush/15351.yaml
@@ -73,4 +73,8 @@ sets:
     set_name: Grand Rush Pack
     rarities:
     - Secret Rare
+  - set_number: RD/P000-KR003
+    set_name: High-Grade Collection Instant Lottery Event
+    rarities:
+    - Over Rush Rare
 yugipedia_page_id: 716405
