--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -40,3 +40,6 @@
 # Animation Chronicle 2024
 - set_abbreviation: AC04
   fake_password_range: 100305000
+# Rage of the Abyss
+- set_abbreviation: ROTA
+  fake_password_range: 101206000
