--- a/data/cards/95471006.yaml
+++ b/data/cards/95471006.yaml
@@ -38,6 +38,8 @@ text:
     ②：让自己场上1只融合怪兽回到额外卡组才能发动。从除外的自己怪兽之中选「X-首领加农」「Y-龙头」「Z-金属履带」最多2只特殊召唤（同名卡最多1张）。
 card_type: Spell
 property: Continuous
+series:
+- A-to-Z
 images:
 - index: 1
   image: XYZCombine-BACH-JP-C.png
